src/stylesheet.css
/* ... */
.just-perfection-api-panel-corner37 #panel .panel-corner { -panel-corner-radius: 37px; }
.just-perfection-api-panel-corner38 #panel .panel-corner { -panel-corner-radius: 38px; }
.just-perfection-api-panel-corner39 #panel .panel-corner { -panel-corner-radius: 39px; }
.just-perfection-api-panel-corner40 #panel .panel-corner { -panel-corner-radius: 40px; }
.just-perfection-api-panel-corner41 #panel .panel-corner { -panel-corner-radius: 41px; }
.just-perfection-api-panel-corner42 #panel .panel-corner { -panel-corner-radius: 42px; }
.just-perfection-api-panel-corner43 #panel .panel-corner { -panel-corner-radius: 43px; }
.just-perfection-api-panel-corner44 #panel .panel-corner { -panel-corner-radius: 44px; }
.just-perfection-api-panel-corner45 #panel .panel-corner { -panel-corner-radius: 45px; }
.just-perfection-api-panel-corner46 #panel .panel-corner { -panel-corner-radius: 46px; }
.just-perfection-api-panel-corner47 #panel .panel-corner { -panel-corner-radius: 47px; }
.just-perfection-api-panel-corner48 #panel .panel-corner { -panel-corner-radius: 48px; }
.just-perfection-api-panel-corner49 #panel .panel-corner { -panel-corner-radius: 49px; }
.just-perfection-api-panel-corner50 #panel .panel-corner { -panel-corner-radius: 50px; }
.just-perfection-api-panel-corner51 #panel .panel-corner { -panel-corner-radius: 51px; }
.just-perfection-api-panel-corner52 #panel .panel-corner { -panel-corner-radius: 52px; }
.just-perfection-api-panel-corner53 #panel .panel-corner { -panel-corner-radius: 53px; }
.just-perfection-api-panel-corner54 #panel .panel-corner { -panel-corner-radius: 54px; }
.just-perfection-api-panel-corner55 #panel .panel-corner { -panel-corner-radius: 55px; }
.just-perfection-api-panel-corner56 #panel .panel-corner { -panel-corner-radius: 56px; }
.just-perfection-api-panel-corner57 #panel .panel-corner { -panel-corner-radius: 57px; }
.just-perfection-api-panel-corner58 #panel .panel-corner { -panel-corner-radius: 58px; }
.just-perfection-api-panel-corner59 #panel .panel-corner { -panel-corner-radius: 59px; }
.just-perfection-api-panel-corner60 #panel .panel-corner { -panel-corner-radius: 60px; }

.just-perfection-api-no-panel-notification-icon .clock-display StIcon
{
    width: 0;
    height: 0;
    padding: 0;
}

.just-perfection-api-no-panel-notification-icon .clock-display-box
{
    padding: 0;
    spacing: 0;
}

.just-perfection-api-no-app-menu-icon .app-menu-icon
{
    width: 0;
    height: 0;
    margin: 0;
}

.just-perfection-api-no-show-apps-button .show-apps,
.just-perfection-api-no-show-apps-button .show-apps StIcon
{
    width: 0;
    height: 0;
    margin: 0;
    spacing: 0;
}

.just-perfection-api-activities-button-icon,
.just-perfection-api-activities-button-icon-monochrome
{
    /* commented because padding would be enough since we are only using */
    /* one element inside the box */
    /* -natural-hpadding: 6px; */
    /* -minimum-hpadding: 6px; */
    padding-right: 6px;
    padding-left: 0;
}

.just-perfection-api-activities-button-icon-monochrome
{
    -st-icon-style: symbolic;
}

.just-perfection-api-activities-button-no-label .just-perfection-api-activities-button-icon,
.just-perfection-api-activities-button-no-label .just-perfection-api-activities-button-icon-monochrome
{
    -natural-hpadding: 0;
    -minimum-hpadding: 0;
    padding-right: 0;
    padding-left: 0;
}

.just-perfection-api-dash-icon-size16 #dash StIcon { height: 16px; width: 16px; }
.just-perfection-api-dash-icon-size22 #dash StIcon { height: 22px; width: 22px; }
.just-perfection-api-dash-icon-size24 #dash StIcon { height: 24px; width: 24px; }
.just-perfection-api-dash-icon-size32 #dash StIcon { height: 32px; width: 32px; }
.just-perfection-api-dash-icon-size48 #dash StIcon { height: 48px; width: 48px; }
.just-perfection-api-dash-icon-size64 #dash StIcon { height: 64px; width: 64px; }


.just-perfection-api-panel-button-padding-size0 .panel-button { -natural-hpadding: 0px; -minimum-hpadding: 0px; }
.just-perfection-api-panel-button-padding-size1 .panel-button { -natural-hpadding: 1px; -minimum-hpadding: 1px; }
.just-perfection-api-panel-button-padding-size2 .panel-button { -natural-hpadding: 2px; -minimum-hpadding: 2px; }
.just-perfection-api-panel-button-padding-size3 .panel-button { -natural-hpadding: 3px; -minimum-hpadding: 3px; }
.just-perfection-api-panel-button-padding-size4 .panel-button { -natural-hpadding: 4px; -minimum-hpadding: 4px; }
.just-perfection-api-panel-button-padding-size5 .panel-button { -natural-hpadding: 5px; -minimum-hpadding: 5px; }
.just-perfection-api-panel-button-padding-size6 .panel-button { -natural-hpadding: 6px; -minimum-hpadding: 6px; }
.just-perfection-api-panel-button-padding-size7 .panel-button { -natural-hpadding: 7px; -minimum-hpadding: 7px; }
.just-perfection-api-panel-button-padding-size8 .panel-button { -natural-hpadding: 8px; -minimum-hpadding: 8px; }
.just-perfection-api-panel-button-padding-size9 .panel-button { -natural-hpadding: 9px; -minimum-hpadding: 9px; }
.just-perfection-api-panel-button-padding-size10 .panel-button { -natural-hpadding: 10px; -minimum-hpadding: 10px; }
.just-perfection-api-panel-button-padding-size11 .panel-button { -natural-hpadding: 11px; -minimum-hpadding: 11px; }
.just-perfection-api-panel-button-padding-size12 .panel-button { -natural-hpadding: 12px; -minimum-hpadding: 12px; }
.just-perfection-api-panel-button-padding-size13 .panel-button { -natural-hpadding: 13px; -minimum-hpadding: 13px; }
.just-perfection-api-panel-button-padding-size14 .panel-button { -natural-hpadding: 14px; -minimum-hpadding: 14px; }
.just-perfection-api-panel-button-padding-size15 .panel-button { -natural-hpadding: 15px; -minimum-hpadding: 15px; }
.just-perfection-api-panel-button-padding-size16 .panel-button { -natural-hpadding: 16px; -minimum-hpadding: 16px; }
.just-perfection-api-panel-button-padding-size17 .panel-button { -natural-hpadding: 17px; -minimum-hpadding: 17px; }
/* ... */

